# thermal_camera

./: CMakeLists.txt
include/: InfEntity.h  USBSDK.h  USBSDK_def.h  common.h
include/linux/: serialport.h  v4l2core.h
